--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,11 @@
 # misc
 .DS_Store
 .env.local
+config.env
 .env.development.local
 .env.test.local
 .env.production.local
-
+config.env
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
